# OmniBrief

./: .coveragerc  .dockerignore  .env.example  .gitignore  .gitmessage  Dockerfile  PROFILE.md  README.md  app.py  commit_message.txt  config.py  docker-compose.yml  gunicorn.conf.py  main.py  pyproject.toml  report.md  requirements.txt  start.sh
.github/workflows/: ci.yml  daily-digest.yml  daily_digest.yml
alembic/: env.py
alembic/versions/: 001_initial.py
frontend/: .env.example  .eslintrc.json  README.md  eslint.config.js  jest.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
frontend/__tests__/: header-section.test.tsx  maintenance-banner.test.tsx  not-found.test.tsx  subscribe-form.test.tsx
frontend/app/: error.tsx  globals.css  layout.jsx  layout.tsx  loading.tsx  not-found.tsx  page.jsx  sitemap.ts
frontend/components/: audience-section.tsx  contact-modal.jsx  contact-modal.tsx  deliverables-section.tsx  footer-section.tsx  header-section.tsx  hero-section.tsx  maintenance-banner.jsx  maintenance-banner.tsx  problem-section.tsx  process-section.jsx  process-section.tsx  subscribe-form.jsx  subscribe-form.tsx
frontend/lib/: api.js  api.ts  use-active-section.ts
frontend/public/: robots.txt  sitemap.xml
src/: __init__.py  agent_graph.py  cost_tracker.py  logger.py  mailer.py  models.py  persistence.py  processor.py  renderer.py  scraper.py  summarizer.py
src/fetchers/: __init__.py  arxiv.py  reddit.py  (+4 more)
templates/: action.html  digest.html  status.html
tests/: test_agent_graph.py  test_api.py  test_app.py  test_arxiv.py  test_github_trending.py  test_hackernews.py  test_main.py  test_persistence.py  test_processor.py  test_producthunt.py  test_reddit.py  test_renderer.py  test_rss_feeds.py  test_scraper.py  test_summarizer.py
