[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "omnibrief"
version = "6.0.0"
description = "Daily AI research digest aggregator"
requires-python = ">=3.11"
dependencies = [
    "httpx",
    "beautifulsoup4",
    "playwright",
    "tenacity",
    "fastapi",
    "uvicorn",
    "jinja2",
    "psycopg",
    "psycopg-pool",
    "langgraph",
    "langchain-openai",
    "python-multipart",
    "pydantic",
    "python-dotenv",
    "email_validator",
    "tiktoken",
    "apscheduler",
]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true

[tool.ruff]
target-version = "py311"
line-length = 140
extend-exclude = ["*.html"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "N"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]
